[package]
name = "htsget-integration-tests-s3"
version = "0.1.0"
authors = ["Andrew Patterson <andrew@patto.net>"]
edition = "2018"

[dependencies]
htsget-http-actix = { path = "../htsget-http-actix" }
htsget-http-core = { path = "../htsget-http-core" }
htsget-id-resolver = { path = "../htsget-id-resolver" }
htsget-search = { path = "../htsget-search", features = ["aws", "async"] }
actix-web = "4.0.1"
regex = "1.5"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3.17", default-features = false }
futures = { version = "0.3.17" }
tokio = { version = "1.12.0", features = ["full"] }
s3-server = { version = "0.1.0" }
aws-sdk-s3 = { version = "0.8.0" }
aws-config = { version = "0.8.0" }
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
