[package]
name = "htsget-lambda"
version = "0.8.1"
rust-version = "1.88"
authors = ["Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2024"
license = "MIT"
description = "A cloud-based instance of htsget-rs using AWS Lambda, which serves data according to the htsget protocol."
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-lambda/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = ["htsget-axum/aws", "htsget-config/aws", "htsget-http/aws"]
url = ["htsget-axum/url", "htsget-config/url", "htsget-http/url"]
experimental = ["htsget-axum/experimental", "htsget-config/experimental", "htsget-http/experimental"]
default = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rustls = "0.23"
lambda_http = { version = "1" }
aws_lambda_events = { version = "1" }
tracing = "0.1"
futures = "0.3"
serde_json = "1"

htsget-config = { version = "0.22.1", path = "../htsget-config", default-features = false }
htsget-http = { version = "0.8.7", path = "../htsget-http", default-features = false }
htsget-axum = { version = "0.9.1", path = "../htsget-axum", default-features = false }
