[package]
name = "htsget-search"
version = "0.9.2"
rust-version = "1.75"
authors = ["Christian Perez Llamas <chrispz@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
description = "The primary mechanism by which htsget-rs interacts with, and processes bioinformatics files. It does this by using noodles to query files and their indices."
license = "MIT"
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-search/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-search/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
s3-storage = [
    "htsget-storage/s3-storage",
    "htsget-config/s3-storage",
    "htsget-test/s3-storage",
    "htsget-test/aws-mocks"
]
url-storage = [
    "htsget-storage/url-storage",
    "htsget-config/url-storage",
    "htsget-test/url-storage"
]
experimental = [
    "htsget-storage/experimental",
    "htsget-config/experimental",
    "htsget-test/experimental"
]
default = []

[dependencies]
# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3" }
futures-util = "0.3"
async-trait = "0.1"

# Noodles
noodles = { version = "0.83", features = ["async", "core", "bgzf", "bam", "bcf", "cram", "csi", "sam", "tabix", "vcf"] }

# Error control, tracing, config
thiserror = "1"
tracing = "0.1"

htsget-config = { version = "0.13.0", path = "../htsget-config", default-features = false }
htsget-storage = { version = "0.2.2", path = "../htsget-storage", default-features = false }
htsget-test = { version = "0.7.2", path = "../htsget-test", features = ["http"], default-features = false }

[dev-dependencies]
tempfile = "3"
http = "1"

criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search-benchmarks"
harness = false
path = "benches/search_benchmarks.rs"
