[package]
name = "htsget-test-utils"
version = "0.1.0"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
server-tests = ["dep:htsget-config", "dep:htsget-search", "dep:htsget-http-core"]
s3-storage = ["htsget-config?/s3-storage", "htsget-search?/s3-storage", "htsget-http-core?/s3-storage"]
default = ["s3-storage"]

[dependencies]
htsget-http-core = { path = "../htsget-http-core", default-features = false, optional = true }
htsget-config = { path = "../htsget-config", default-features = false, optional = true }
htsget-search = { path = "../htsget-search", default-features = false, optional = true }
async-trait = "0.1"
http = "0.2"
mime = "0.3"
serde_json = "1.0"
serde = "1.0"
envy = "0.4"
serde_bytes = "0.11"
rcgen = "0.9"