[package]
name = "htsget-test-utils"
version = "0.1.0"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
test-traits = [
    "dep:http",
    "dep:serde_json",
    "dep:serde",
]
cors-tests = ["test-traits", "dep:htsget-config"]
server-tests = [
    "test-traits",
    "dep:htsget-config",
    "dep:htsget-search",
    "dep:htsget-http-core",
    "dep:noodles-vcf",
    "dep:noodles-bgzf",
    "dep:reqwest",
    "dep:tokio",
    "dep:futures",
    "dep:async-trait",
    "dep:mime",
    "dep:envy",
    "dep:serde_bytes",
    "dep:base64"
]
s3-storage = ["htsget-config?/s3-storage", "htsget-search?/s3-storage", "htsget-http-core?/s3-storage"]
default = ["s3-storage"]

[dependencies]
# Server tests dependencies
htsget-http-core = { path = "../htsget-http-core", default-features = false, optional = true }
htsget-config = { path = "../htsget-config", default-features = false, optional = true }
htsget-search = { path = "../htsget-search", default-features = false, optional = true }

noodles-vcf = { version = "0.19", features = ["async"], optional = true }
noodles-bgzf = { version = "0.15", features = ["async"], optional = true }

reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }
tokio = { version = "1.20", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
http = { version = "0.2", optional = true }
mime = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
envy = { version = "0.4", optional = true }
serde_bytes = { version = "0.11", optional = true }
base64 = { version = "0.13", optional = true }

# Default dependencies
rcgen = "0.9"