[package]
name = "htsget-test"
version = "0.6.2"
rust-version = "1.75"
authors = ["Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT"
description = "Common test functions and utilities used by htsget-rs."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-test/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-test/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
http = [
    "dep:async-trait",
    "dep:http",
    "dep:serde_json",
    "dep:serde",
    "dep:htsget-config",
    "dep:noodles",
    "dep:reqwest",
    "dep:tokio",
    "dep:futures",
    "dep:mime",
    "dep:base64"
]
aws-mocks = [
    "s3-storage",
    "dep:tempfile",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:s3s",
    "dep:s3s-fs",
    "dep:s3s-aws"
]
s3-storage = ["htsget-config?/s3-storage"]
url-storage = ["htsget-config?/url-storage"]
experimental = ["dep:crypt4gh", "dep:htsget-config", "htsget-config/experimental"]
default = []

[dependencies]
# Server tests dependencies
htsget-config = { version = "0.10.1", path = "../htsget-config", default-features = false, optional = true }

noodles = { version = "0.82", optional = true, features = ["async", "bgzf", "vcf", "cram", "bcf", "bam", "fasta"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "fs"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
http = { version = "1", optional = true }
mime = { version = "0.3", optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
serde = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

tempfile = { version = "3", optional = true }
aws-sdk-s3 = { version = "1", features = ["test-util"], optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", features = ["test-util"], optional = true }
s3s = { version = "0.10", optional = true }
s3s-fs = { version = "0.10", optional = true }
s3s-aws = { version = "0.10", optional = true }

# Crypt4GH
crypt4gh = { version = "0.4", git = "https://github.com/EGA-archive/crypt4gh-rust", optional = true }

# Default dependencies
rcgen = "0.13"
thiserror = "1"
