[package]
name = "htsget-test"
version = "0.7.2"
rust-version = "1.88"
authors = ["Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2024"
license = "MIT"
description = "Common test functions and utilities used by htsget-rs."
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-test/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
http = [
    "dep:async-trait",
    "dep:http",
    "dep:serde_json",
    "dep:serde",
    "dep:htsget-config",
    "dep:noodles",
    "dep:reqwest",
    "dep:reqwest-middleware",
    "dep:tokio",
    "dep:futures",
    "dep:mime",
    "dep:base64",
    "dep:jsonwebtoken",
    "dep:axum",
    "dep:chrono"
]
aws = [
    "dep:tempfile",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:s3s",
    "dep:s3s-fs",
    "dep:s3s-aws",
    "htsget-config?/aws"
]
url = ["htsget-config?/url"]
experimental = ["dep:crypt4gh", "dep:htsget-config", "htsget-config/experimental"]
default = []

[dependencies]
noodles = { version = "0.104", optional = true, features = ["async", "bgzf", "vcf", "cram", "bcf", "bam", "fasta"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
reqwest-middleware = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "fs"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
http = { version = "1", optional = true }
mime = { version = "0.3", optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
serde = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

cfg-if = "1"
tempfile = { version = "3", optional = true }
aws-sdk-s3 = { version = "1", features = ["test-util"], optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", features = ["test-util"], optional = true }
s3s = { version = "0.12", optional = true }
s3s-fs = { version = "0.12", optional = true }
s3s-aws = { version = "0.12", optional = true }

# Crypt4GH
crypt4gh = { version = "0.4", git = "https://github.com/EGA-archive/crypt4gh-rust", optional = true }

# Auth testing dependencies
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
axum = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Default dependencies
rcgen = "0.14"
thiserror = "2"

# Server tests dependencies
htsget-config = { version = "0.20.1", path = "../htsget-config", default-features = false, optional = true }
